--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "npm run format && next build && next export",
     "start": "next start",
     "lint": "next lint --dir src",
     "lint:fix": "npm run lint --fix",
