--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint-config-next": "13.0.6",
+    "firebase": "^9.14.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
