--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.8.1"
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4"
   }
 }
