--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
+    "gsap": "^3.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
